<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="info_dialog_title" translatable="false">"Info"</string>
    <string name="google_maps_key" translatable="false">"AIzaSyDkyNsNMAi8VoxWrLnI-8pp0W5P54r2Dvs"</string>
    <string name="facebook_app_id" translatable="false">284067495425756</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb284067495425756</string>
    <string name="webAPI_username" translatable="false">webapiadmin@mosy.com</string>
    <string name="webAPI_pass" translatable="false">!23Qwe</string>
    <string name="webAPI_grant_type" translatable="false">password</string>
    <string name="pref_walls_visited" translatable="false">"prefWallsVisited"</string>
    <string name="pref_authToken_webApi" translatable="false">"prefAuthTokenWebApi"</string>
    <string name="pref_authTokenType_webApi" translatable="false">"prefAuthTokenTypeWebApi"</string>
    <string name="pref_authTokenExpiresInSeconds_webApi" translatable="false">"prefAuthTokenWebApiExpiresInSeconds"</string>
    <string name="pref_authTokenExpiresAt_webApi" translatable="false">"prefAuthTokenWebApiExpiresAt"</string>
    <string name="pref_collectionName_developersMode" translatable="false">DevelopersModePreferences</string>
    <string name="pref_developersModeEnabled" translatable="false">DevelopersModeEnabled</string>
    <string name="pref_collectionName_webApi" translatable="false">"WebApiToken"</string>
    <string name="pref_collectionName_user" translatable="false">UserToken</string>
    <string name="pref_authToken_user" translatable="false">prefAuthTokenUser</string>
    <string name="pref_authTokenType_user" translatable="false">prefAuthTokenType</string>
    <string name="pref_authTokenExpiresAt_user" translatable="false">prefAuthTokenExpiresAt</string>
    <string name="pref_authTokenExpiresInSeconds_user" translatable="false">prefAuthTokenExpiresInSeconds</string>
    <string name="app_name">"TreatSpark"</string>
    <string name="manifest_venuesActivityTitle" translatable="false">"Venues"</string>
    <string name="manifest_venueDetailsActivityTitle" translatable="false">"Venue Details"</string>
    <string name="manifest_itemDetailsActivityTitle" translatable="false">"Item Details"</string>
    <string name="link_social_facebook" translatable="false">https://www.facebook.com/treatspark/</string>
    <string name="link_social_instagram" translatable="false">https://www.instagram.com/treatsparks</string>
    <string name="link_social_twitter" translatable="false">https://www.twitter.com/treatspark</string>
    <string name="azureBlobContainerPath_fboalbums_100x100" translatable="false">userimages\\fboalbums\\100x100</string>
    <string name="azureBlobContainerPath_requestableAlbums_100x100" translatable="false">userimages\\requestablealbums\\100x100</string>
    <string name="azureBlobContainerPath_profile_100x100" translatable="false">userimages\\profile\\100x100</string>
    <string name="azureBlobContainerPath_fboAlbums_200x200" translatable="false">userimages\\fboalbums\\200x200</string>
    <string name="azureBlobContainerPath_requestablesAlbums_200x200" translatable="false">userimages\\requestablealbums\\200x200</string>
    <string name="azureBlobContainerPath_profile_200x200" translatable="false">userimages\\profile\\200x200</string>
    <string name="azureBlobContainerPath_fboAlbums_300x300" translatable="false">userimages\\fboalbums\\300x300</string>
    <string name="azureBlobContainerPath_requestablesAlbums_300x300" translatable="false">userimages\\requestablealbums\\300x300</string>
    <string name="azureBlobContainerPath_profile_300x300" translatable="false">userimages\\profile\\300x300</string>
    <string name="azureBlobContainerPath_profile_original" translatable="false">userimages\\profile\\original</string>
    <string name="azureBlobContainerPath_requestablesAlbums_original" translatable="false">userimages\\requestablealbums\\original</string>
    <string name="azureBlobContainerPath_fboAlbums_original" translatable="false">userimages\\fboalbums\\original</string>
    <string name="activity_landing_venuesBtn"><![CDATA[VENUES & MENUS]]></string>
    <string name="activity_landing_dishesBtn"><![CDATA[DISHES & DRINKS]]></string>
    <string name="activity_landing_languageBgSpinner">Bulgarian</string>
    <string name="activity_landing_languageEnUSSpinner">English</string>
    <string name="activity_landing_languageDeSpinner">German</string>
    <string name="activity_landing_languageElSpinner">Greek</string>
    <string name="activity_landing_languageRuSpinner">Russian</string>
    <string name="activity_landing_languageEsSpinner">Spanish</string>
    <string name="activity_landing_noInternetMessageTextView">No internet! Please check your network settings or try again later.</string>
    <string name="activity_landing_profileBtn">My profile</string>
    <string name="activity_landing_loginSignUpBtn">Login / Signup</string>
    <string name="activity_login_titleTextView">"Login"</string>
    <string name="activity_login_emailEditText">"Enter Email"</string>
    <string name="activity_login_passwordEditText">"Password"</string>
    <string name="activity_login_cancelBtn">"Back"</string>
    <string name="activity_login_loginBtn">"Go"</string>
    <string name="activity_login_forgotPasswordBtn">"Forgot password"</string>
    <string name="activity_login_registerBtn">"Signup"</string>
    <string name="activity_register_titleTextView">"Create account"</string>
    <string name="activity_register_emailEditText">"Enter Email"</string>
    <string name="activity_register_passwordEditText">"Password"</string>
    <string name="activity_register_cancelBtn">"Back"</string>
    <string name="activity_register_registerBtn">"Create"</string>
    <string name="menu_searchTitle">"Search"</string>
    <string name="menu_btnNavigateToVenuesText">"Venues"</string>
    <string name="menu_btnNavigateToDishesText">"Dishes"</string>
    <string name="activity_wall_searchVenuesHint">"Search venues …"</string>
    <string name="activity_wall_searchDishesHint">"Search dishes …"</string>
    <string name="activity_wall_filtersSettingsTextView">"Filters Settings"</string>
    <string name="activity_wall_swipeDownToRefreshMessageTextView">SWIPE DOWN TO REFRESH</string>
    <string name="activity_wall_locationNotResolvedToast">Location was not resolved …</string>
    <string name="activity_wall_missingFiltersInfoLabel">missing:</string>
    <string name="activity_wall_noInternetTextView">No internet!</string>
    <string name="activity_venueDetails_mondayHoursTextView">"Mon"</string>
    <string name="activity_venueDetails_tuesdayHoursTextView">"Tue"</string>
    <string name="activity_venueDetails_wednesdayHoursTextView">"Wed"</string>
    <string name="activity_venueDetails_thursdayHoursTextView">"Thu"</string>
    <string name="activity_venueDetails_fridayHoursTextView">"Fri"</string>
    <string name="activity_venueDetails_saturdayHoursTextView">"Sat"</string>
    <string name="activity_venueDetails_sundayHoursTextView">"Sun"</string>
    <string name="activity_venueDetails_getDirections">Directions</string>
    <string name="item_menuListItem_nameTextView">"Menu Item Name"</string>
    <string name="item_menuListItem_priceTextView">"Price"</string>
    <string name="item_dish_nameTextView">"Dish Name"</string>
    <string name="item_dish_venueNameTextView">"Venue Name"</string>
    <string name="activity_venuesFilters_title">"Filter Venues"</string>
    <string name="activity_venuesFilters_goBtn">"Go"</string>
    <string name="activity_venuesFilters_showClosedTextView">Only show open Venues</string>
    <string name="activity_venuesFilters_distanceMeasureTypeKilometers">km</string>
    <string name="activity_venuesFilters_distanceFilterTextView">Search distance:</string>
    <string name="activity_venuesFilters_distanceMeasureTypeMeters">m</string>
    <string name="activity_venuesFilters_accessibilityFiltersTitle">Accessibility</string>
    <string name="activity_venuesFilters_availabilityFiltersTitle">Availability</string>
    <string name="activity_venuesFilters_atmosphereFiltersTitle">Atmosphere</string>
    <string name="activity_venuesFilters_cultureFiltersTitle">Ethnicity</string>
    <string name="VenuesFilterBadgeBikesParkingAvailableName">"Bike parking/locks"</string>
    <string name="VenuesFilterBadgeToysCornerName">"Toys corner"</string>
    <string name="VenuesFilterBabyFriendlyName">Baby friendly</string>
    <string name="VenuesFilterBadgeNoSmokingName">"No smoking"</string>
    <string name="VenuesFilterBadgeParkingAvailableName">"Car parking"</string>
    <string name="VenuesFilterBadgePetFriendlyName">"Pet friendly"</string>
    <string name="VenuesFilterBadgeRomanticPlaceName">"Romantic place"</string>
    <string name="VenuesFilterBadgeWheelchairFriendlyName">"Wheelchair friendly"</string>
    <string name="VenuesFilterBadgeWiFiAvailableName">"Wi-Fi available"</string>
    <string name="VenuesFilterBadgeWorkingFriendlyName">"Working friendly"</string>
    <string name="VenuesFilterArtName">Art</string>
    <string name="VenuesFilterCosyName">Cosy</string>
    <string name="VenuesFilterDancingName">Dancing</string>
    <string name="VenuesFilterLiveMusicName">Live music</string>
    <string name="VenuesFilterNoMusicName">No music / quiet area</string>
    <string name="VenuesFiltersQuietMusicName">Quiet music</string>
    <string name="VenuesFilterPanoramaName">Scenic view</string>
    <string name="VenuesFilterTraditionalName">Traditional</string>
    <string name="VenuesFilterLiveSportsName">Live sports (TV)</string>
    <string name="VenuesFilterPrivateName">Private events possible</string>
    <string name="VenuesFilterWorking24hName">Open 24h</string>
    <string name="VenuesFilterAllYouCanEatName">All you can eat</string>
    <string name="VenuesFilterOutdoorSittingName">Outdoor sitting</string>
    <string name="VenuesFilterPubGamesName">Pub games</string>
    <string name="VenuesFilterRooftopName">Rooftop area</string>
    <string name="VenuesFilterSelfServiceName">Self-service</string>
    <string name="VenuesFilterSheeshaName">Sheesha</string>
    <string name="VenuesFilterCultureBulgariaName">"Bulgaria"</string>
    <string name="VenuesFilterCultureRussiaName">"Russia"</string>
    <string name="VenuesFilterCultureGreeceName">"Greece"</string>
    <string name="VenuesFilterCultureSpainName">"Spain"</string>
    <string name="VenuesFilterCulturePortugalName">"Portugal"</string>
    <string name="VenuesFilterCultureGermanyName">"Germany"</string>
    <string name="VenuesFilterCultureCubaName">"Cuba"</string>
    <string name="VenuesFilterCultureAngolaName">"Angola"</string>
    <string name="VenuesFilterCultureTurkeyName">"Turkey"</string>
    <string name="VenuesFilterCultureBrazilName">"Brazil"</string>
    <string name="VenuesFilterCultureItalyName">"Italy"</string>
    <string name="VenuesFilterCultureColombiaName">"Colombia"</string>
    <string name="VenuesFilterCultureArgentinaName">"Argentina"</string>
    <string name="VenuesFilterCouchesName">Couches</string>
    <string name="VenuesFilterStandingDesksName">Standing desks</string>
    <string name="VenuesFilterBilliardsName">Billiard/Pool table</string>
    <string name="VenuesFilterBoardGamesName">Board games</string>
    <string name="VenuesFilterDartName">Dart</string>
    <string name="VenuesFilterPianoName">Piano</string>
    <string name="VenuesFilterTableFootballName">Table football</string>
    <string name="VenuesFilterKaraokeName">Karaoke</string>
    <string name="VenuesFilterBadgeWorkingFriendlyDescription">Working friendly. Calm and creative atmosphere.</string>
    <string name="VenuesFilterBadgeWiFiAvailableDescription">Wi-Fi network available.</string>
    <string name="VenuesFilterBadgeWheelchairFriendlyDescription">Wheelchair accessible.</string>
</resources>