<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    tools:context = ".LoginActivity_"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:padding= "@dimen/activity_horizontal_margin"
    android:background="@color/colorPageBackground1"
    android:orientation="vertical"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id = "@+id/login_title"
            android:text = "@string/activity_login_titleTextView"
            android:layout_width="wrap_content"
            android:layout_height = "wrap_content"
            android:textSize = "35sp"

            />

        <TextView
            android:id = "@+id/login_appName"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/app_name"
            android:textColor = "#740d26"
            android:textSize = "35sp" />

        <EditText
            android:id = "@+id/login_etEmail"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:hint = "@string/activity_login_emailEditText"
            android:focusable = "true"
            android:textColorHighlight = "#ff7eff15"
            android:textColorHint = "@color/soft"
            android:layout_marginTop = "46sp" />

        <EditText
            android:id="@+id/login_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textColorHint="@color/soft"
            android:hint="@string/activity_login_passwordEditText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_llInitialLoadingProgress"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" >
        </ProgressBar>
    </LinearLayout>




    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/landing_lButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_landing_dishes"
            android:textColor="@color/colorPrimary"
            android:text="@string/activity_login_loginBtn"
            android:stateListAnimator="@null"/>

        <Button
            android:id="@+id/login_btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_landing_dishes"
            android:textColor="@color/colorPrimary"
            android:text="@string/activity_login_forgotPasswordBtn"
            android:stateListAnimator="@null"/>

        <Button
            android:id="@+id/login_btnRegister"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_landing_dishes"
            android:textColor="@color/colorPrimary"
            android:text="@string/activity_login_registerBtn"
            android:stateListAnimator="@null"/>

        <Button
            android:id="@+id/login_btnCancel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_landing_dishes"
            android:textColor="@color/colorPrimary"
            android:text="@string/activity_login_cancelBtn"
            android:stateListAnimator="@null"/>

    </LinearLayout>


</LinearLayout>