<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WallActivity_">

    <!--<item-->
        <!--android:orderInCategory="0"-->
        <!--android:id="@+id/action_app_name"-->
        <!--app:actionLayout="@layout/action_bar_logo"-->
        <!--android:title="@string/app_name"-->
        <!--app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_venues"
        android:orderInCategory="0"
        android:title="@string/menu_btnNavigateToVenuesText"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_map_marker_32"
        android:iconTint="@color/colorWhite"
        android:iconTintMode="src_atop" />

    <item
        android:id="@+id/action_dishes"
        android:orderInCategory="0"
        android:title="@string/menu_btnNavigateToDishesText"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_food_variant_32"
        android:iconTint="@color/colorWhite"
        android:iconTintMode="src_atop" />

    <item
        android:orderInCategory="2"
        android:id="@+id/action_search"
        android:title="@string/menu_searchTitle"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:actionLayout="@layout/action_bar_toolbar"/>

</menu>