<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/filters_venues_tvDistanceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/activity_venuesFilters_distanceFilterTextView"
                android:textColor="@color/colorPrimaryVeryLight" />

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/filters_venues_sbDistanceFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:min="100"
                android:max="10000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/activity_venuesFilters_showClosedTextView"
                android:textColor="@color/colorPrimaryVeryLight" />

            <Switch
                android:id="@+id/filters_venues_sbWorkingTimeFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:background="@color/colorPrimaryDark">

        <Button
            android:id="@+id/filterVenues_GoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_venuesFilters_goBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>
</LinearLayout>